--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-jest": "^27.4.4",
     "jest": "^27.4.4",
     "postcss": "^8.4.4",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.2.1",
     "vue-jest": "^3.0.4"
   }
 }
